--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -19,7 +19,7 @@
 	<DebugType>full</DebugType>
 	<Optimize>false</Optimize>
 	<OutputPath>Temp\bin\Debug\</OutputPath>
-	<DefineConstants>DEBUG;TRACE;UNITY_5_1_1;UNITY_5_1;UNITY_5;ENABLE_NEW_BUGREPORTER;ENABLE_2D_PHYSICS;ENABLE_4_6_FEATURES;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_FRAME_DEBUGGER;ENABLE_GENERICS;ENABLE_HOME_SCREEN;ENABLE_IMAGEEFFECTS;ENABLE_LIGHT_PROBES_LEGACY;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_PHYSICS_PHYSX3;ENABLE_PLUGIN_INSPECTOR;ENABLE_SHADOWS;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_UNET;ENABLE_UNITYEVENTS;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_LICENSE;ENABLE_AUDIOMIXER_SUSPEND;ENABLE_EDITOR_METRICS;INCLUDE_DYNAMIC_GI;INCLUDE_GI;INCLUDE_IL2CPP;INCLUDE_DIRECTX12;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;ENABLE_LOCALIZATION;UNITY_WEBPLAYER;ENABLE_SUBSTANCE;WEBPLUG;ENABLE_TEXTUREID_MAP;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_MONO;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_OSX;CROSS_PLATFORM_INPUT</DefineConstants>
+	<DefineConstants>DEBUG;TRACE;UNITY_5_1_1;UNITY_5_1;UNITY_5;ENABLE_NEW_BUGREPORTER;ENABLE_2D_PHYSICS;ENABLE_4_6_FEATURES;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_FRAME_DEBUGGER;ENABLE_GENERICS;ENABLE_HOME_SCREEN;ENABLE_IMAGEEFFECTS;ENABLE_LIGHT_PROBES_LEGACY;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_PHYSICS_PHYSX3;ENABLE_PLUGIN_INSPECTOR;ENABLE_SHADOWS;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_UNET;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_LICENSE;ENABLE_AUDIOMIXER_SUSPEND;ENABLE_EDITOR_METRICS;INCLUDE_DYNAMIC_GI;INCLUDE_GI;INCLUDE_IL2CPP;INCLUDE_DIRECTX12;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;ENABLE_LOCALIZATION;UNITY_ANDROID;UNITY_ANDROID_API;ENABLE_SUBSTANCE;ENABLE_TEXTUREID_MAP;ENABLE_EGL;ENABLE_NETWORK;ENABLE_RUNTIME_GI;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_MONO;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_OSX;CROSS_PLATFORM_INPUT;MOBILE_INPUT</DefineConstants>
 	<ErrorReport>prompt</ErrorReport>
 	<WarningLevel>4</WarningLevel>
 	<NoWarn>0169</NoWarn>
@@ -46,19 +46,18 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\Cart.cs" />
-     <Compile Include="Assets\Scripts\CartCollect.cs" />
-     <Compile Include="Assets\Scripts\CartManager.cs" />
-     <Compile Include="Assets\Scripts\CartStore.cs" />
+     <Compile Include="Assets\Scripts\Cart\Cart.cs" />
+     <Compile Include="Assets\Scripts\Cart\CartCollect.cs" />
+     <Compile Include="Assets\Scripts\Cart\CartManager.cs" />
+     <Compile Include="Assets\Scripts\Cart\CartStore.cs" />
      <Compile Include="Assets\Scripts\Character.cs" />
      <Compile Include="Assets\Scripts\Character1.cs" />
      <Compile Include="Assets\Scripts\ColorChange.cs" />
-     <Compile Include="Assets\Scripts\DayManager.cs" />
-     <Compile Include="Assets\Scripts\DayUI.cs" />
      <Compile Include="Assets\Scripts\DesativarSplash.cs" />
      <Compile Include="Assets\Scripts\DestroyAfterTime.cs" />
      <Compile Include="Assets\Scripts\Dog\AnimationDog.cs" />
      <Compile Include="Assets\Scripts\Dog\DodWalk.cs" />
+     <Compile Include="Assets\Scripts\Dog\DogScript.cs" />
      <Compile Include="Assets\Scripts\Dog\MoveDog.cs" />
      <Compile Include="Assets\Scripts\Dog\lancarPau.cs" />
      <Compile Include="Assets\Scripts\Dog\targetMove.cs" />
@@ -85,28 +84,37 @@
      <Compile Include="Assets\Scripts\Instaciadores\MoveCamera.cs" />
      <Compile Include="Assets\Scripts\Instaciadores\SpawMather.cs" />
      <Compile Include="Assets\Scripts\Instaciadores\SuperSpeed.cs" />
+     <Compile Include="Assets\Scripts\LevelControl\DayManager.cs" />
+     <Compile Include="Assets\Scripts\LevelControl\DayUI.cs" />
+     <Compile Include="Assets\Scripts\LevelControl\LevelControl.cs" />
+     <Compile Include="Assets\Scripts\LevelControl\NewBehaviourScript.cs" />
      <Compile Include="Assets\Scripts\Market.cs" />
      <Compile Include="Assets\Scripts\Menu.cs" />
      <Compile Include="Assets\Scripts\MenuButton.cs" />
-     <Compile Include="Assets\Scripts\MouseVehicle.cs" />
      <Compile Include="Assets\Scripts\Move.cs" />
      <Compile Include="Assets\Scripts\PainelMatherTurtorial.cs" />
      <Compile Include="Assets\Scripts\Pedestrian.cs" />
      <Compile Include="Assets\Scripts\PedestrianManager.cs" />
-     <Compile Include="Assets\Scripts\Player.cs" />
-     <Compile Include="Assets\Scripts\PlayerInputMouse.cs" />
-     <Compile Include="Assets\Scripts\PlayerInputTouch.cs" />
-     <Compile Include="Assets\Scripts\PlayerInputTouch2.cs" />
-     <Compile Include="Assets\Scripts\PlayerInputTouch3.cs" />
-     <Compile Include="Assets\Scripts\PlayerInputTouch4.cs" />
+     <Compile Include="Assets\Scripts\Player\Player.cs" />
+     <Compile Include="Assets\Scripts\Player\PlayerInputMouse.cs" />
+     <Compile Include="Assets\Scripts\Player\PlayerInputTouch.cs" />
+     <Compile Include="Assets\Scripts\Player\PlayerInputTouch2.cs" />
+     <Compile Include="Assets\Scripts\Player\PlayerInputTouch3.cs" />
+     <Compile Include="Assets\Scripts\Player\PlayerInputTouch4.cs" />
+     <Compile Include="Assets\Scripts\Spawners\SpawnDog.cs" />
+     <Compile Include="Assets\Scripts\Spawners\SpawnHelper.cs" />
+     <Compile Include="Assets\Scripts\Spawners\SpawnMother.cs" />
+     <Compile Include="Assets\Scripts\Spawners\SpawnThief.cs" />
      <Compile Include="Assets\Scripts\Stuff.cs" />
+     <Compile Include="Assets\Scripts\TurtorialText.cs" />
      <Compile Include="Assets\Scripts\Vaga.cs" />
      <Compile Include="Assets\Scripts\VagasManager.cs" />
-     <Compile Include="Assets\Scripts\Vehicle.cs" />
-     <Compile Include="Assets\Scripts\VehicleManager.cs" />
+     <Compile Include="Assets\Scripts\Vehicle\MouseVehicle.cs" />
+     <Compile Include="Assets\Scripts\Vehicle\Vehicle.cs" />
+     <Compile Include="Assets\Scripts\Vehicle\VehicleManager.cs" />
      <Compile Include="Assets\Scripts\Waypoint.cs" />
      <Compile Include="Assets\Scripts\Waypoints.cs" />
-     <Compile Include="Assets\StuffController.cs" />
+     <Compile Include="Assets\sprites\StuffController.cs" />
      <None Include="Assets\Fonts\minecrafter\Read Me.txt" />
      <None Include="Assets\todo.txt" />
      <None Include="Assets\Teste.txt" />
